--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1879,7 +1879,7 @@ font-size: 1.5rem;
 {color:#000;text-decoration: none;}
 .sku, .date_release {      
 
-  color: #0099FF;
+  color: #666;
   padding: 0;
   top: 32px;
   bottom: 0;
