--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1904,3 +1904,5 @@ font-size: 1.5rem;
 
 
 .reviews a, .open_artists_bio a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
+
+.presentation {background-color: #F9F9F9; padding:20px;}
