--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1422,7 +1422,7 @@ margin-top:-10px;
 padding-bottom:0px;
 line-height:17px;
 }*/
-.open_releases_press_text
+.open_releases_press_text, .presentation
 {
   color: #000;
   padding-bottom: 0px;
