--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1526,6 +1526,7 @@ text-align:right;
     min-height: 30px;
     font-size: 17px;
     font-size: 1.7rem;
+    font-family: 'Jockey One', sans-serif;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
@@ -1847,6 +1848,7 @@ input.button {
   color: #FFF;
   font-weight: bold;  
   text-transform: uppercase;
+  font-family: 'Jockey One', sans-serif;
   font-size: 15px;
   font-size: 1.5rem;
 }
