--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -380,13 +380,11 @@ font-size:0.9rem;
 .header_nav_3
 {
   width: 100%!important;
-  background-color: #000;
-  height: 80px;
-  top: 635px;
+  background-color: transparent;
+  top: 696px;
   z-index: 300;
   position: absolute;
   text-align: right;
-  padding-top: 30px;
 }
 
 
@@ -425,13 +423,12 @@ font-family: 'Jockey One', sans-serif;
 
 .header_nav_3 a, .header_nav_3 li
 {
-color: #fff;;
-text-decoration:none;
-text-transform:uppercase;
-font-size : 37px;
-font-size:3.7 rem;
-letter-spacing: 1px;
-
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 37px;
+  font-size: 3.7 rem;
+  letter-spacing: 1px;
 }
 
 
@@ -1904,4 +1901,4 @@ font-size: 1.5rem;
 
 .reviews a, .open_artists_bio a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1rem;}
 
-.presentation {background-color: #F9F9F9; padding:30px 20px 90px 20px;width:95%;margin-top:80px}
+.presentation {background-color: #F9F9F9; padding:30px 20px 90px 20px;width:95%;margin-top:31px}
