--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1427,6 +1427,7 @@ line-height:17px;
   padding-top: 30px;
   background-color: #F9F9F9;
    width:95%;
+   padding: 20px;
 }
 
 .open_releases_press_text a /*.open_releases_artwork_credit a*/
