--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1424,10 +1424,8 @@ line-height:17px;
   font-size: 1.6rem;
   line-height: 28px;
   text-align: justify;
-  padding-top: 30px;
   background-color: #F9F9F9;
    width:95%;
-   padding: 20px;
 }
 
 .open_releases_press_text a /*.open_releases_artwork_credit a*/
@@ -1647,7 +1645,6 @@ h1.open_artists_name
   font-size: 60px;
   font-size: 4rem;
   color: #000;
-  margin-bottom: 80px;
   margin-top: 20px;
 
 }
@@ -1890,4 +1887,4 @@ font-size: 1.5rem;
 
 .reviews a, .open_artists_bio a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1rem;}
 
-.presentation {background-color: #F9F9F9; padding:30px 20px 90px 20px;width:95%;margin-top:56px}
+.presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px}
