--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1845,7 +1845,7 @@ input.button:focus {outline: none;}
 #radio 
 {background-color: #000;}
 
-.creditswriters {
+.writers {
  text-align: right;
 font-size: 1.5rem;
 float: right;
@@ -1855,7 +1855,7 @@ background-color: #F9F9F9;
 padding: 10px 10px 20px 10px;
 width: 101.9%;
 }
-.writers
+.writers2
 {  
   text-align: right;
 font-size: 1.5rem;
@@ -1868,7 +1868,7 @@ font-style: italic;
 font-size: 1.5rem;
 }
 
-.open_releases_download_licence a, .writers a
+.open_releases_download_licence a, .writers a, .writers2 a
 {color:#000;text-decoration: none;}
 .sku, .date_release {      
 
