--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1858,12 +1858,15 @@ width: 101.9%;
 .writers2
 {  
   text-align: right;
-font-size: 1.5rem;
-padding: 10px;
-float: right;
-font-style: italic;
+  font-size: 3rem;
+  float: right;
+  font-style: italic;
+  margin-right: -19px;
+  background-color: #F9F9F9;
+  padding: 10px 10px 20px 10px;
+  width: 101.9%;
 }
-
+.writers2 a {color:#000; text-transform: uppercase;text-decoration: none;}
 .open_releases_download_licence {  
 font-size: 1.5rem;
 }
@@ -1896,6 +1899,6 @@ font-size: 1.5rem;
   }
 
 
-.reviews a, .open_artists_bio a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1rem;}
+.reviews a, {color:#000; text-transform: uppercase;text-decoration: none;font-size: 1rem;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px}
