--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1420,7 +1420,7 @@ line-height:17px;
 .open_artists_bio
 {
   color: #000;
-  padding-bottom: 0px;
+  padding-bottom: 20px;
   font-size: 1.6rem;
   line-height: 28px;
   text-align: justify;
@@ -1858,13 +1858,11 @@ width: 101.9%;
 .writers2
 {  
   text-align: right;
-  font-size: 3rem;
+  font-size: 1.5rem;
   float: right;
-  font-style: italic;
-  margin-right: -19px;
   background-color: #F9F9F9;
-  padding: 10px 10px 20px 10px;
-  width: 101.9%;
+  padding: inherit;
+  width:110%%;
 }
 .writers2 a {color:#000; text-transform: uppercase;text-decoration: none;}
 .open_releases_download_licence {  
