--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1854,6 +1854,6 @@ float:right
     margin-left: -10px;
   }
 
-.reviews a {color:#000; padding:10px; text-decoration: none;}
+.reviews a {color:#29ABE2; padding:10px; text-decoration: none;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px}
