--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1208,7 +1208,7 @@ margin-top:20px;
 margin-left:10px;
 }
 
-/* .open_releases_download_licence
+ .open_releases_download_licence
 {
   color: #000;
   text-decoration: none;
@@ -1219,7 +1219,7 @@ margin-left:10px;
   font-family: 'Jockey One', sans-serif;
   font-weight: normal;
 
-} */
+} 
 
 .open_releases_download_licence a
 {
@@ -1854,6 +1854,6 @@ float:right
     margin-left: -10px;
   }
 
-.reviews a {color:#29ABE2; padding:10px; text-decoration: none;}
+.reviews a {color:#29ABE2; padding:10px; text-transform: lowercase; text-decoration: none;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px}
