--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1208,7 +1208,7 @@ margin-top:20px;
 margin-left:10px;
 }
 
- .open_releases_download_licence
+/* .open_releases_download_licence
 {
   color: #000;
   text-decoration: none;
@@ -1219,7 +1219,7 @@ margin-left:10px;
   font-family: 'Jockey One', sans-serif;
   font-weight: normal;
 
-} 
+} */
 
 .open_releases_download_licence a
 {
@@ -1257,6 +1257,7 @@ h2.open_releases_artist
   font-size: 30px;
   font-size: 3rem;
   color: #000;
+  padding:10px 0px 10px 0px;
 
 }
 
@@ -1816,9 +1817,8 @@ input.button:focus {outline: none;}
 
 .writers {
  text-align: right;
-font-size: 1.5rem;
+font-size: 1.6rem;
 float: right;
-font-style: italic;
 margin-right: -19px;
 background-color: #F9F9F9;
 padding: 10px 10px 20px 10px;
@@ -1850,10 +1850,10 @@ float:right
 
   .reviews {
     color: #000;
-    font-size: 1.7rem;
+    font-size:2rem;
     margin-left: -10px;
   }
-
-.reviews a {color:#29ABE2; padding:10px; text-transform: lowercase; text-decoration: none;}
+  .reviews a:hover {color:#000;}
+.reviews a {color:#29ABE2; padding:10px; text-transform: uppercase; text-decoration: none;}
 .open_artists_bio a {float: right;}
-.presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px}
+.presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px;font-size:1.6rem;}
