--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1257,7 +1257,7 @@ h2.open_releases_artist
   font-size: 30px;
   font-size: 3rem;
   color: #000;
-  padding:10px 0px 10px 0px;
+  padding:10px 0px 0px 0px;
 
 }
 
@@ -1849,9 +1849,7 @@ float:right
 
 
   .reviews {
-    color: #000;
-    font-size:2rem;
-    margin-left: -10px;
+    color: #000; display:block;  line-height: 28px;
   }
   .reviews a:hover {color:#000;}
 .reviews a {color:#29ABE2; padding:10px; text-transform: uppercase; text-decoration: none;}
