--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1852,6 +1852,6 @@ float:right
      line-height: 28px;
   }
   .reviews a:hover {color:#000;}
-.reviews a {color:#29ABE2; padding:10px 0px 10px 0px; text-transform: uppercase; text-decoration: none;}
+.reviews a {color:#29ABE2; padding:10px 0px 10px 0px; text-transform: lowercase; text-decoration: none;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px;font-size:1.6rem;}
