--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1851,9 +1851,10 @@ float:right
   .reviews, .credits {
      line-height: 28px;
      color:#666;
+     text-transform: lowercase;
   }
   .credits br {display: none;}
   .reviews a:hover, .credits a:hover {color:#000;}
-.reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px; text-transform: lowercase; text-decoration: none;}
+.reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px;  text-decoration: none;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;width:95%;margin-top:56px;font-size:1.6rem;}
