--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1819,7 +1819,9 @@ input.button:focus {outline: none;}
  text-align: right;
 font-size: 1.6rem;
 float: right;
+margin-right: -19px;
 background-color: #F9F9F9;
+padding: 10px 10px 20px 10px;
 width: 101.9%;
 }
 .writers2
