--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1489,6 +1489,7 @@ text-align:right;
     padding: inherit;
     padding: 4px;
     margin-bottom: 0px;
+    margin-top: 20px;
   }
 
 .open_releases_buy a:hover
