--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1857,4 +1857,4 @@ float:right
   .reviews a:hover, .credits a:hover {color:#000;}
 .reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px;  text-decoration: none;}
 .open_artists_bio a {float: right;}
-.presentation {background-color: #F9F9F9; padding:2%;width:95%;font-size:1.6rem;}
+.presentation {background-color: #F9F9F9; padding:2%;width:95%;font-size:1.6rem;margin-top: -20px;}
