--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -11,10 +11,7 @@ margin-right: auto;
 /* HTML & BODY
 ***************************************************************/
 
-.header_nav_3_content_logo img
-{
-  margin-top:-1px;
-}
+
 
 body
 {
@@ -60,17 +57,18 @@ src: url('../typo/pf_tempesta_seven.ttf');
 .header_news_2_closed,
 .header_news_2_closed_button,
 .open_releases_content,
-.header_nav_3_content,
 .infos_content,
 .footer_content,
 .release_content,
 .open_release,
 .open_artists_content {
 width:960px;
-margin-left: auto;
-margin-right: auto;
 
 }
+
+.header_nav_3_content {margin-left: auto;
+  margin-right: auto;width 60px;
+  }
 
 
 .triangle img {position: absolute;top:-4.1px!important;display : none}
