--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -63,11 +63,12 @@ src: url('../typo/pf_tempesta_seven.ttf');
 .open_release,
 .open_artists_content {
 width:960px;
-
+margin-left: auto;
+  margin-right: auto;
 }
 
 .header_nav_3_content {margin-left: auto;
-  margin-right: auto;width 60px;
+  margin-right: auto;width :60px;
   }
 
 
