--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -381,6 +381,7 @@ font-size:0.9rem;
   z-index: 300;
   position: absolute;
   text-align: left;
+  margin-top:10px;
 }
 
 
@@ -1408,8 +1409,7 @@ ul.open_releases_button, ul.open_artists_button
 float: right;
 z-index:500;
 position: relative;
-margin-bottom: 0px;
-
+top:-40px;
 }
 
 .open_releases_button li, .open_artists_button li
@@ -1851,4 +1851,4 @@ float:right
   .reviews a:hover, .credits a:hover {color:#000;}
 .reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px;  text-decoration: none;}
 .open_artists_bio a {float: right;}
-.presentation {background-color: #F9F9F9; padding:2%;width:95%;font-size:1.5rem;margin-top:30px;}
+.presentation {background-color: #F9F9F9; padding:2%;width:95%;font-size:1.5rem;margin-top:40px;}
