--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1410,6 +1410,7 @@ float: right;
 z-index:500;
 position: relative;
 top:-50px;
+height: 0px;
 }
 
 .open_releases_button li, .open_artists_button li
