--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1079,14 +1079,14 @@ opacity:0.7;
 {color:#29ABE2;opacity:1;}
 .footer p
 {
-color:#29ABE2;
+color:#FFF;
 font-size: 2.2rem;
 font-weight: bold;
 }
 
 .footer_content p a
 {
-color:#FFF;
+color:#29ABE2;
 text-decoration:none;
 font-weight: normal;
 }
@@ -1094,6 +1094,7 @@ font-weight: normal;
 .footer_content p a:hover
 {
 opacity:1;
+color: #FFF;
 }
 .footer_links_2
 {
@@ -1190,7 +1191,7 @@ font-weight: lighter;}
 h2.open_releases_artwork_credit a {color:#666;font-weight: lighter;}
 h2.open_releases_artwork_credit a:hover {color:#000;}
 
-.open_releases_artwork_credit a,  .open_artists_bio a {color:#000;font-weight:bold;text-decoration: none;}
+.open_releases_artwork_credit a,  .open_artists_bio a {color:#29ABE2;font-weight:bold;text-decoration: none;}
 .open_artits_bio a:hover {color:#000;}
 h1.open_releases_title, h2.open_releases_title, h3.open_releases_title, h2.open_artists_title
 {
@@ -1409,7 +1410,7 @@ ul.open_releases_button, ul.open_artists_button
 float: right;
 z-index:500;
 position: relative;
-top:-60px;
+top:-10px;
 height: 0px;
 }
 
@@ -1826,15 +1827,17 @@ width: 101.9%;
   float: right;
   background-color: #F9F9F9;
   padding: inherit;
-  width:110%;
+  width:100%;
 }
 .writers2 a {color:#000; text-transform: uppercase;text-decoration: none;}
 .open_releases_download_licence {  
 font-size: 1.5rem;
+background-color: #FFF;
+padding: 2%;
 }
 
 .open_releases_download_licence a, .writers a, .writers2 a
-{color:#000;text-decoration: none;}
+{color:#29ABE2;text-decoration: none;}
 .sku, .date_release {      
 
   color: #666;
