--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1830,9 +1830,15 @@ width: 101.9%;
 }
 .writers2 a {color:#000; text-transform: uppercase;text-decoration: none;}
 .open_releases_download_licence {  
-font-size: 1.5rem;
-background-color: #FFF;
-padding: 2%;
+    font-size: 1.3rem;
+    background-color: #FFF;
+    padding: 2% 0% 2% 2%;
+    margin-top: -20px;
+    width: 98.%;
+    margin-left: 0px;
+    border-left: 1px solid #d2d2d2;
+    border-bottom: 1px solid #d2d2d2;
+    border-left: 1px solid #d2d2d2;
 }
 
 .open_releases_download_licence a, .writers a, .writers2 a
