--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1838,7 +1838,7 @@ width: 101.9%;
     margin-left: 0px;
     border-left: 1px solid #d2d2d2;
     border-bottom: 1px solid #d2d2d2;
-    border-left: 1px solid #d2d2d2;
+    border-right: 1px solid #d2d2d2;
 }
 
 .open_releases_download_licence a, .writers a, .writers2 a
@@ -1861,3 +1861,10 @@ float:right
 .reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px;  text-decoration: none;}
 .open_artists_bio a {float: right;}
 .presentation {background-color: #F9F9F9; padding:2%;font-size:1.5rem;margin-top:50px;}
+
+#nonartarea {
+  border-left: 1px solid #d2d2d2!important;
+  border-bottom: 1px solid #d2d2d2!important;
+  border-right: 1px solid #d2d2d2!important;
+  border-top: 0px transparent !important;
+}
