--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1485,6 +1485,10 @@ height: 0px;
     padding: inherit;
     margin-bottom: 0px;
     margin-top: 20px;
+    border-left: 1px solid #d2d2d2!important;
+  border-top: 1px solid #d2d2d2!important;
+  border-right: 1px solid #d2d2d2!important;
+  border-bottom: 0px transparent !important;
   }
 
 .open_releases_buy a:hover
