--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1471,6 +1471,8 @@ height: 0px;
 {
   color:transparent!important;
 }
+
+.playerbandcamp {margin-top:10px;}
   .open_releases_buy
   {
     color: #FFF;
