--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1593,7 +1593,8 @@ margin-top:10px;}
   padding:0px;
 }
 
-
+.open_releases_infos {float:left}
+.open_releases_infos2 {float: right;}
 /* OPEN ARTISTS
 ***************************************************************/
 
