--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1476,7 +1476,7 @@ height: 0px;
   {
     color: #FFF;
     margin-left: 0px;
-    background-color: #0099FF;
+    background-color: #FFF;
     height: 30px;
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -1484,7 +1484,6 @@ height: 0px;
     letter-spacing: 2px;
     padding: inherit;
     margin-bottom: 0px;
-    margin-top: -10px;
     border-left: 1px solid #eee!important;
   border-top: 1px solid #eeee!important;
   border-right: 1px solid #eee!important;
@@ -1513,12 +1512,11 @@ height: 0px;
 
 .open_releases_buy a
 {
-    color: #0099FF;
-    color: #0099FF;
+
     text-decoration: none;
     font-weight: lighter;
     font-size: 1.5rem;
-    color: #FFF;
+    color: #29abe2;
 }
 
 
