--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1820,7 +1820,7 @@ width: 101.9%;
   text-align: right;
   font-size: 1.5rem;
   float: right;
-  background-color: #F9F9F9;
+  background-color: transparent;
   padding: inherit;
   width:100%;
 }
