--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -381,7 +381,7 @@ font-size:0.9rem;
   z-index: 300;
   position: absolute;
   text-align: left;
-  margin-top:10px;
+  margin: 27px 0px 20px 0px;;
 }
 
 
@@ -414,8 +414,8 @@ margin:5px 8px 5px 0px;
   color:#29abe2;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 25px;
-  font-size: 2.5rem;
+  font-size: 30px;
+  font-size: 3rem;
   letter-spacing: 1px;
 }
 
@@ -1410,7 +1410,6 @@ ul.open_releases_button, ul.open_artists_button
   float: right;
   z-index: 500;
   position: relative;
-  margin-top: -20px;
 }
 
 .open_releases_button li, .open_artists_button li
@@ -1855,7 +1854,7 @@ float:right
 .reviews a, .credits a {color:#29ABE2; padding:10px 0px 10px 0px;  text-decoration: none;}
 .open_artists_bio a {float: right;}
 .text-bio {text-align: justify;}
-.presentation {background-color: #F9F9F9; padding:2%;font-size:1.5rem;margin-top:40px;min-height: 450px;}
+.presentation {background-color: #F9F9F9; padding:2%;font-size:1.5rem;margin-top:50px;min-height: 450px;}
 
 #nonartarea {
   border-left: 1px solid #eee!important;
