--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1621,13 +1621,13 @@ background-color:#000;
 
 float:left!important;
 }
+.open_artists_listing_releases_container{width: 600px; height: 500px;}
 
 .open_artists_listing_releases
 {
 width:220px;
 background-color:#FFF;
-padding-bottom:0px;
-margin:40px 40px 40px 0px;
+
 float:left;
 position: relative;
 }
