--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -70,6 +70,7 @@ margin-right: auto;
 }
 
 
+.releases_discography_listing_all {margin-bottom: 30px;;}
 .triangle img {position: absolute;top:-4.1px!important;display : none}
 
 .artists h1,
@@ -668,17 +669,16 @@ margin-top:px;
 .open_artists_listing_releases h1,
 .releases_discography_number h1
 {
-padding:0px 0px 0px 10px;
-font-size:14px;
-font-size:1.4rem;
+padding:10px 10px 10px 10px;
+font-size:13px;
+font-size:1.3rem;
 }
 
 .releases_discography_number h2,.open_artists_listing_releases h2
 {
-padding:0px 0px 0px 10px;
-font-size:14px;
-font-size:1.4rem;
-margin-left:-4px;
+padding:10px 10px 10px 10px
+font-size:13px;
+font-size:1.3rem;
 }
 
 
@@ -688,19 +688,17 @@ margin-left:-4px;
 color:#29ABE2!important;
 background-color: #FFF!important;
 text-decoration:none;
-text-transform:uppercase;
+text-transform:lowercase;
 font-weight:normal;
-font-family: 'Jockey One', sans-serif;
 }
 
 .releases_discography_number h2 a,.open_artists_listing_releases h2 a
 {
 color:#000!important;
 text-decoration:none;
-text-transform:uppercase;
+text-transform:lowercase;
 margin-top:-5px;
 font-weight:normal;
-font-family: 'Jockey One', sans-serif;
 background-color: #FFF!important;
 }
 
