--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -676,7 +676,7 @@ font-size:1.3rem;
 
 .releases_discography_number h2,.open_artists_listing_releases h2
 {
-padding:10px 10px 10px 10px
+padding:10px 10px 10px 10px;
 font-size:13px;
 font-size:1.3rem;
 }
