--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -620,7 +620,7 @@ margin:0px 10px 0px 10px;
 
 .releases_discography_number
 {
-background-color:#FFF;
+background-color:#f2f2f2;
 width:220px!important;
 }
 
@@ -686,7 +686,7 @@ font-size:1.3rem;
 .releases_discography_number h1 a,.open_artists_listing_releases h1 a
 {
 color:#29ABE2!important;
-background-color: #FFF!important;
+background-color:transparent;
 text-decoration:none;
 text-transform:lowercase;
 font-weight:normal;
