--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -699,7 +699,7 @@ text-decoration:none;
 text-transform:lowercase;
 margin-top:-5px;
 font-weight:normal;
-background-color: #FFF!important;
+background-color: transparent;
 }
 
 
