--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -620,7 +620,7 @@ margin:0px 10px 0px 10px;
 
 .releases_discography_number
 {
-background-color:#f2f2f2;
+background-color:transparent;
 width:220px!important;
 }
 
@@ -693,7 +693,7 @@ font-weight:normal;
 
 .releases_discography_number h2 a,.open_artists_listing_releases h2 a
 {
-color:#000!important;
+color:#FFF!important;
 text-decoration:none;
 margin-top:-5px;
 font-weight:normal;
