--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -63,7 +63,7 @@ src: url('../typo/pf_tempesta_seven.ttf');
 .release_content,
 .open_release,
 .open_artists_content {
-width:95%;
+width:960px;
 margin-left: auto;
 margin-right: auto;
 
