--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -94,6 +94,7 @@ margin-right: auto;
   padding-top: 30 px;
 }
 
+.artwork_artists_listing_all h1  {color: #FFF;}
 /* CALQUES
 ***************************************************************/
 
