--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -671,6 +671,7 @@ margin-top:px;
 padding:5px 10px 10px 5px;
 font-size:13px;
 font-size:1.3rem;
+color : #FFF;
 }
 
 .releases_discography_number h2,.open_artists_listing_releases h2
@@ -684,11 +685,13 @@ font-size:1.3rem;
 
 .releases_discography_number h1 a,.open_artists_listing_releases h1 a
 {
-color:#29ABE2!important;
+color:#FFF!important;
 background-color:transparent;
 text-decoration:none;
 font-weight:normal;
 }
+
+.releases_discography_number h1 a,.open_artists_listing_releases h1 a:hover {color:#29abe2;}
 
 .releases_discography_number h2 a,.open_artists_listing_releases h2 a
 {
