--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1852,3 +1852,5 @@ float:right
   border-right: 1px solid #eee!important;
   border-top: 0px transparent !important;
 }
+
+.container_12 .grid_3 {width: auto!important;}
