--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1507,7 +1507,7 @@ ul.open_releases_button, ul.open_artists_button
     font-size: 1.5rem;
     background-color: #29abe2;
     color: #FFF;
-    padding:2%;
+    padding:4% 2%;
 }
 
 
