--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1604,7 +1604,7 @@ h1.open_artists_name
 
 }
 
-.open_artists_artwork_listing_releases
+.open_artists_artwork_listing_releases, .open_artists_listing_releases
 {
 width:220px;
 background-color:#000;
