--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1099,9 +1099,15 @@ body {
   margin-top : 20px;
   }
   .open_artists_artwork_listing_releases, .open_artists_listing_releases {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
+
+      display: grid; 
+      grid-auto-columns: 1fr 1fr; 
+      grid-template-columns: auto auto auto; 
+      grid-template-rows: 1fr; 
+      gap: 0px 0px; 
+      grid-template-areas: 
+        ". . ."; 
+    
   }
 
   /*
