--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -819,6 +819,7 @@ body {
   color : #29ABE2;
   font-weight : bold;
   text-decoration : none;
+  margin-top: -20px;
   }
   .open_artits_bio a:hover {
   color : #000;
