--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -442,7 +442,7 @@ body {
   text-decoration : none;
   font-weight : normal;
   }
-  .releases_discography_number h1 a, .open_artists_listing_releases h1 a:hover {
+.open_artists_listing_releases h1 a:hover {
   color : #29abe2;
   }
   .releases_discography_number h2 a, .open_artists_listing_releases h2 a {
