--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -443,7 +443,7 @@ body {
   font-weight : normal;
   }
 .open_artists_listing_releases h1 a:hover {
-  color : #29abe2;
+  color : #29abe2!important;
   }
   .releases_discography_number h2 a, .open_artists_listing_releases h2 a {
   color : #FFF !important ;
