--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1027,6 +1027,7 @@ body {
   padding : 1%;
   margin-right: 10px;
   display: block;
+  text-align: center;
   }
   .open_releases_buy a:hover {
   background-color : #000;
