--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1285,6 +1285,8 @@ body {
   min-height : 520px;
   border : #eee solid 1px;
   }
+  .presentation h1 a{color: #29ABE2;
+    text-decoration: none;}
   #nonartarea {
   border-left : 1px solid #eee !important ;
   border-bottom : 1px solid #eee !important ;
