--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1,3 +1,8 @@
+@media (max-width: 767px) {
+  .hidden-mobile {
+    display: none;
+  }
+}
 body {
   padding : 0;
   font-family : 'Open Sans', sans-serif;
